tests/snapshots/trace_solver__spanshot_request@17575938995002473827.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: true
    rules_display_style: Plain
  bundle_name: waffle
  request: "&[x]: &[&mut T]"
---
&[x] @ p: &[&mut T]
// Applying rule `Deref(EatOuter)`
[x] @ *p: [&mut T]
// Applying rule `Constructor`
x @ (*p).0: &mut T
// Applying rule `Binding`
let x: &mut T = (*p).0

// Final bindings (simplified):
let x: &mut T = (*p).0; // Borrow-check error: CantCopyRefMut
