tests/snapshots/trace_solver__spanshot_request@1783422039504402772.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: permissive
  request: "[ref mut x]: &[T]"
---
[ref mut x] @ p: &[T]
// Applying rule `ConstructorRef`
ref mut x @ &(*p).0: &T
// Applying rule `BindingBorrow`
x @ &mut &(*p).0: &mut &T

// Final bindings (simplified):
let x: &mut &T = &mut &(*p).0 // Borrow-check error: MutBorrowBehindSharedBorrow
